objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Theater__c</fullName>
        <description>Case
00150174
Per Stelli Munnis request, this field should be added to Campaign</description>
        <label>Theater</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East and Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central America and the Caribbean</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_No_Leads__c</fullName>
        <label>Total No of Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Web_Site__c</fullName>
        <label>Web Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>isExclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is going to indicate if Warm hand Off is required or not</description>
        <inlineHelpText>Designates that only Campaign Partners can be assigned to any lead associated to this campaign. Leads will be routed to Five9 for appointments.</inlineHelpText>
        <label>Campaign Partner  Exclusive Assignment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Employees_Members_Total__c</fullName>
        <label># of Employees/Members (Total)</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Active_EU_Campaign</fullName>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>Theater__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Italy</value>
        </filters>
        <label>All Active EU Campaign</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Campaigns2</fullName>
        <columns>Business_Unit__c</columns>
        <columns>Five9__Five9CallNow__c</columns>
        <columns>Five9__Five9list__c</columns>
        <columns>Five9__Five9ReportEmail__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Campaign_Goal__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>AssignRandomPartner__c</columns>
        <columns>Requires_Lead_Pre_Qualification__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Campaign_Goal__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Homes_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Short_Description__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>New Homes</value>
        </filters>
        <label>New Homes Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <role>SunpowerAllBUs</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RLC_Campaigns</fullName>
        <columns>Business_Unit__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Campaign_Goal__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>RLC</value>
        </filters>
        <label>RLC Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SunPower_New_Homes</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Short_Description__c</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Griffith</value>
        </filters>
        <filters>
            <field>Short_Description__c</field>
            <operation>startsWith</operation>
            <value>1. 2. 3. 4.</value>
        </filters>
        <label>SunPower New Homes</label>
        <language>en_US</language>
        <sharedTo>
            <group>New_Homes_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>cam_dmelendez_campaign_queue</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Number_of_Leads__c</columns>
        <columns>HQ_Primary_Address__c</columns>
        <columns>Campaign_Target_Audience__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>List_Description__c</columns>
        <columns>Short_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>contains</operation>
            <value>New Homes</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>david</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>HQ_Primary_Address__c</field>
            <operation>notContain</operation>
            <value>remove</value>
        </filters>
        <label>cam_dmelendez_campaign queue</label>
        <language>en_US</language>
        <sharedTo>
            <group>New_Homes_Users</group>
            <group>Solar_Advisors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>cam_slowrance_campaign_queue</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Number_of_Leads__c</columns>
        <columns>HQ_Primary_Address__c</columns>
        <columns>Campaign_Target_Audience__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>List_Description__c</columns>
        <columns>Short_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>contains</operation>
            <value>New Homes</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>stephanie</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>HQ_Primary_Address__c</field>
            <operation>notContain</operation>
            <value>remove</value>
        </filters>
        <label>cam_slowrance_campaign queue</label>
        <language>en_US</language>
        <sharedTo>
            <group>New_Homes_Users</group>
            <group>Solar_Advisors</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Alliance</fullName>
        <active>true</active>
        <description>Alliance Campaigns</description>
        <label>Alliance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Standard Campaign.</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Campaign_isExclusive_or_Pre_Qualified</fullName>
        <active>true</active>
        <description>only pre-qualified or is exclusive has be true</description>
        <errorConditionFormula>AND(
Requires_Lead_Pre_Qualification__c= TRUE,
isExclusive__c= TRUE
)</errorConditionFormula>
        <errorMessage>You can choose either Campaign Partner Exclusive Assignment or Requires Lead pre-Qualification, but not both on the same campaign.</errorMessage>
    </validationRules>
</CustomObject>